# Intro-to-Computer-Graphics

./: .gitignore  CMakeLists.txt  README.md  ReadMe.txt  default.ppm  todo.txt
Assignment1/: CMakeLists.txt  ReadMe.txt
Assignment1/data/: fragment.glsl  vertex.glsl
Assignment1/src/: boilerplate.cpp  boilerplate.h  main.cpp  main.h  transformations.cpp  transformations.h
Assignment2/: CMakeLists.txt  ReadMe.txt
Assignment2/output/data/: fragment.glsl  vertex.glsl
Assignment2/output/shaderData/: fragment.glsl  geometry.glsl  tessControl.glsl  tessEvaluation.glsl  vertex.glsl
Assignment2/src/: inputHandler.h  main.cpp  main.h  setup.h  shader.cpp  shader.h  vertexArray.cpp  vertexArray.h
Assignment3/: ReadMe.txt
Assignment3/data/: config0.txt  configMyChess.txt
Assignment3/data/chessPieces/pawn/: pawn.mtl
Assignment3/data/models/provided/chess_board/: board.mtl
Assignment3/data/models/provided/oak_table/: oak_table.mtl
Assignment3/data/models/provided/plate/: plate.mtl
Assignment3/data/models/provided/timmy_cup/: timmy_cup.mtl
Assignment3/src/: ImageTexture.cpp  ImageTexture.h  Model.h  Mouse.cpp  OpenModel.h  main.h  vertexArray.cpp  vertexArray.h
Assignment4/Images/: yours.ppm
Assignment4/data/: config.txt  configMy.txt
Assignment4/data/models/: testObject.mtl
Assignment4/src/: main.cpp
Assignment4/src/Raytracer/: ImageData.h  Ray.h  RayTracer.cpp
Assignment4/src/Scene/: Camera.cpp  Camera.h  Scene.h
Assignment4/src/Scene/Models/: Mesh.cpp  Mesh.h  Sphere.cpp  Sphere.h
Assignment4/src/Scene/Shading/: Color.cpp  Color.h  DirectionalLight.cpp  Light.cpp  Light.h  Material.cpp  Material.h  PointLight.cpp  PointLight.h
data/: config.txt
data/models/offical/donut/: donut.mtl
data/models/provided/chess_king/: king.mtl
data/models/provided/chess_queen/: queen.mtl
data/models/provided/coffee_cup/: coffee_cup.mtl
data/models/provided/knife/: knife.mtl
data/models/provided/oak_chair/: oak_chair.mtl
data/shaderData/: fragment.glsl  geometry.glsl  lineFrag.glsl  lineVert.glsl  vertex.glsl
src/: Camera.cpp  Camera.h  InputHandler.cpp  InputHandler.h  Model.cpp  Model.h  Mouse.cpp  Mouse.h  OpenGL_Program.cpp  OpenGL_Program.h  OpenModel.cpp  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Transformations.cpp  Transformations.h  inputHandler.h  main.cpp  main.h  myMath.h  setup.h
src/OpenGL/: Camera.h  OpenGL_Program.cpp  OpenGL_Program.h  mainOpenGL.cpp  mainOpenGL.h
src/Raytracer/: Color.cpp  Color.h  Image.cpp  Image.h  ImageData.cpp  ImageData.h  Intersection.cpp  Intersection.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h
src/Scene/: Camera.cpp  Camera.h  Model.cpp  Model.h  Scene.cpp  Scene.h
src/Scene/Models/: Mesh.cpp  Mesh.h  ModelSet.cpp  ModelSet.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
src/Scene/Shading/: Color.cpp  Color.h  DirectionalLight.cpp  DirectionalLight.h  Light.h  Lights.cpp  Lights.h  Material.cpp  Material.h  MaterialTypes.h  PointLight.cpp  PointLight.h
